@@ -59,14 +59,14 @@
 
   <properties>
     <!-- Java Usage -->
-    <java.version>17</java.version>
-    <java.release.version>17</java.release.version>
+    <java.version>21</java.version>
+    <java.release.version>21</java.release.version>
 
     <cargo-maven3-plugin.version>1.10.28</cargo-maven3-plugin.version>
     <clirr.comparisonVersion>6.0.2</clirr.comparisonVersion>
 
     <slf4j.version>2.0.18</slf4j.version>
-    <spring.version>6.2.19</spring.version>
+    <spring.version>7.0.8</spring.version>
     <assertj.version>3.27.7</assertj.version>
     <byte-buddy.version>1.18.11</byte-buddy.version>
     <mockito.version>5.23.0</mockito.version>
@@ -102,7 +102,7 @@
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>3.0.6</version>
+      <version>4.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -117,44 +117,33 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <!-- Keep spring-web at 5.3.39 until jakarta upgrade occurs -->
-      <version>5.3.39</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
-      <groupId>net.sourceforge.stripes</groupId>
-      <artifactId>stripes</artifactId>
-      <version>1.6.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-spec</artifactId>
-      <version>1.2.5</version>
+      <groupId>jakarta.servlet.jsp.jstl</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-impl</artifactId>
-      <version>1.2.5</version>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+      <version>3.0.1</version>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet.jsp</groupId>
       <artifactId>jakarta.servlet.jsp-api</artifactId>
-      <version>2.3.6</version>
+      <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
-      <version>4.0.4</version>
+      <version>6.0.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -177,7 +166,7 @@
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-infrastructure</artifactId>
-      <version>5.2.6</version>
+      <version>6.0.4</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -294,7 +283,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <!-- Keep disabled until jakarta upgrade occurs due to issues with liberty holding stdin/stdout open with ee8
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
         <artifactId>cargo-maven3-plugin</artifactId>
@@ -327,21 +315,20 @@
           </execution>
         </executions>
       </plugin>
-      -->
     </plugins>
   </build>
 
   <profiles>
     <!-- Profiles for Application Server -->
     <profile>
-      <id>tomcat9</id>
+      <id>tomcat11</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <tomcat.major-version>9</tomcat.major-version>
-        <tomcat.version>9.0.120</tomcat.version>
-        <cargo.maven.containerId>tomcat${tomcat.major-version}x</cargo.maven.containerId>
+        <tomcat.major-version>11.0</tomcat.major-version>
+        <tomcat.version>11.0.24</tomcat.version>
+        <cargo.maven.containerId>tomcat11x</cargo.maven.containerId>
         <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/${tomcat.version}/tomcat-${tomcat.version}.zip</cargo.maven.containerUrl>
       </properties>
       <build>
@@ -362,15 +349,31 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
-      <!-- TODO: Remove after we switch to jakarta as end of life -->
-      <id>tomee80</id>
+      <id>glassfish8</id>
       <properties>
-        <tomee.major-version>8</tomee.major-version>
-        <tomee.version>8.0.16</tomee.version>
-        <cargo.maven.containerId>tomee${tomee.major-version}x</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomee/apache-tomee/${tomee.version}/apache-tomee-${tomee.version}-plume.zip</cargo.maven.containerUrl>
+        <glassfish.version>8.0.3</glassfish.version>
+        <cargo.maven.containerId>glassfish8x</cargo.maven.containerId>
+        <cargo.server.start.timeout>240000</cargo.server.start.timeout>
       </properties>
+      <dependencies>
+        <!-- GlassFish bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>3.0.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>3.0.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
@@ -380,24 +383,26 @@
               <container>
                 <containerId>${cargo.maven.containerId}</containerId>
                 <type>installed</type>
-                <zipUrlInstaller>
-                  <url>${cargo.maven.containerUrl}</url>
-                </zipUrlInstaller>
+                <artifactInstaller>
+                  <groupId>org.glassfish.main.distributions</groupId>
+                  <artifactId>glassfish</artifactId>
+                  <version>${glassfish.version}</version>
+                  <type>zip</type>
+                </artifactInstaller>
               </container>
             </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
+
     <profile>
-      <id>wildfly26</id>
-      <!-- TODO: Remove after we switch to jakarta as end of life -->
+      <id>jetty12</id>
       <properties>
-        <wildfly.major-version>26</wildfly.major-version>
-        <wildfly.version>26.1.3.Final</wildfly.version>
-        <cargo.maven.containerId>wildfly${wildfly.major-version}x</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://github.com/wildfly/wildfly/releases/download/${wildfly.version}/wildfly-${wildfly.version}.zip</cargo.maven.containerUrl>
-        <cargo.jvmargs>--add-opens=java.base/java.util=ALL-UNNAMED</cargo.jvmargs>
+        <jetty.major-version>12</jetty.major-version>
+        <jetty.version>12.1.11</jetty.version>
+        <cargo.maven.containerId>jetty${jetty.major-version}x</cargo.maven.containerId>
+        <cargo.jetty.deployer.ee.version>ee10</cargo.jetty.deployer.ee.version>
       </properties>
       <build>
         <plugins>
@@ -406,23 +411,26 @@
             <artifactId>cargo-maven3-plugin</artifactId>
             <configuration>
               <container>
-                <containerId>${cargo.maven.containerId}</containerId>
+                <containerId>jetty12x</containerId>
                 <type>installed</type>
-                <zipUrlInstaller>
-                  <url>${cargo.maven.containerUrl}</url>
-                </zipUrlInstaller>
+                <artifactInstaller>
+                  <groupId>org.eclipse.jetty</groupId>
+                  <artifactId>jetty-home</artifactId>
+                  <version>${jetty.version}</version>
+                </artifactInstaller>
               </container>
             </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
+
     <profile>
-      <id>liberty-ee8</id>
+      <id>liberty26</id>
       <properties>
-        <liberty.version>26.0.0.6</liberty.version>
+        <liberty.version>26.0.0.7</liberty.version>
         <cargo.maven.containerId>liberty</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/com/ibm/websphere/appserver/runtime/wlp-javaee8/${liberty.version}/wlp-javaee8-${liberty.version}.zip</cargo.maven.containerUrl>
+        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/io/openliberty/openliberty-jakartaee11/${liberty.version}/openliberty-jakartaee11-${liberty.version}.zip</cargo.maven.containerUrl>
       </properties>
       <build>
         <plugins>
@@ -445,70 +453,32 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
-      <id>jetty</id>
+      <id>payara7</id>
       <properties>
-        <jetty.major-version>12</jetty.major-version>
-        <jetty.version>12.1.11</jetty.version>
-        <cargo.maven.containerId>jetty${jetty.major-version}x</cargo.maven.containerId>
-        <cargo.jetty.deployer.ee.version>ee8</cargo.jetty.deployer.ee.version>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <configuration>
-              <container>
-                <containerId>jetty12x</containerId>
-                <type>installed</type>
-                <artifactInstaller>
-                  <groupId>org.eclipse.jetty</groupId>
-                  <artifactId>jetty-home</artifactId>
-                  <version>${jetty.version}</version>
-                </artifactInstaller>
-              </container>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <!-- Use 'payara5' as this is not supported with java 17 due to hk2 'dcs' is null error. -->
-      <id>glassfish5</id>
-      <properties>
-        <glassfish.major-version>5</glassfish.major-version>
-        <glassfish.version>5.1.0</glassfish.version>
-        <cargo.maven.containerId>glassfish${glassfish.major-version}x</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/org/glassfish/main/distributions/glassfish/${glassfish.version}/glassfish-${glassfish.version}.zip</cargo.maven.containerUrl>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven3-plugin</artifactId>
-            <configuration>
-              <container>
-                <containerId>${cargo.maven.containerId}</containerId>
-                <type>installed</type>
-                <zipUrlInstaller>
-                  <url>${cargo.maven.containerUrl}</url>
-                </zipUrlInstaller>
-              </container>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>payara5</id>
-      <properties>
-        <payara.major-version>5</payara.major-version>
-        <payara.version>5.2022.5</payara.version>
+        <payara.version>7.2026.6</payara.version>
         <cargo.maven.containerId>payara</cargo.maven.containerId>
-        <cargo.maven.containerUrl>https://repo.maven.apache.org/maven2/fish/payara/distributions/payara/${payara.version}/payara-${payara.version}.zip</cargo.maven.containerUrl>
-        <cargo.startup.timeout>300000</cargo.startup.timeout>
+        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/fish/payara/distributions/payara/${payara.version}/payara-${payara.version}.zip</cargo.maven.containerUrl>
+        <cargo.server.start.timeout>240000</cargo.server.start.timeout>
       </properties>
+      <dependencies>
+        <!-- Payara bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>3.0.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>3.0.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
@@ -521,31 +491,66 @@
                 <zipUrlInstaller>
                   <url>${cargo.maven.containerUrl}</url>
                 </zipUrlInstaller>
-                <timeout>${cargo.startup.timeout}</timeout>
               </container>
             </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
+
     <profile>
-      <id>resin</id>
+      <id>tomee10</id>
       <properties>
-        <resin.major-version>4</resin.major-version>
-        <resin.version>4.0.67</resin.version>
-        <cargo.maven.containerId>resin${resin.major-version}x</cargo.maven.containerId>
-        <!-- Do not use https as the certificate is bad which prevents this from working! -->
-        <cargo.maven.containerUrl>http://caucho.com/download/resin-${resin.version}.zip</cargo.maven.containerUrl>
+        <tomee.major-version>10</tomee.major-version>
+        <tomee.version>10.2.0</tomee.version>
+        <cargo.maven.containerId>tomee${tomee.major-version}x</cargo.maven.containerId>
+        <cargo.maven.containerUrl>https://repo1.maven.org/maven2/org/apache/tomee/apache-tomee/${tomee.version}/apache-tomee-${tomee.version}-plume.zip</cargo.maven.containerUrl>
       </properties>
+      <dependencies>
+        <!-- GlassFish bundles its own JSTL; mark as provided to avoid a
+             duplicate TLD URI registration when Jasper scans both the server
+             lib and WEB-INF/lib. -->
+        <dependency>
+          <groupId>jakarta.servlet.jsp.jstl</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+          <version>3.0.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+          <version>3.0.1</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven3-plugin</artifactId>
             <configuration>
-              <packagingExcludes>WEB-INF/beans.xml</packagingExcludes>
+              <container>
+                <containerId>${cargo.maven.containerId}</containerId>
+                <type>installed</type>
+                <zipUrlInstaller>
+                  <url>${cargo.maven.containerUrl}</url>
+                </zipUrlInstaller>
+              </container>
             </configuration>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>wildfly40</id>
+      <properties>
+        <wildfly.version>40.0.1.Final</wildfly.version>
+        <cargo.maven.containerId>wildfly40x</cargo.maven.containerId>
+        <cargo.maven.containerUrl>https://github.com/wildfly/wildfly/releases/download/${wildfly.version}/wildfly-${wildfly.version}.zip</cargo.maven.containerUrl>
+      </properties>
+      <build>
+        <plugins>
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven3-plugin</artifactId>
